Fix various problem - Scrollbar shifting layout (FIXED) - Search query not working (FIXED) - Add meta tags

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,3 @@ h6 {
   --bs-font-sans-serif: 'Pretendard Variable', 'Segoe UI', Roboto, 'Helvetica Neue', 'Noto Sans', 'Liberation Sans', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 }
-
-p {
-  margin-bottom: 0;
-}
